--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,4 @@
+# shellcheck disable=all
 ### GLOBAL VARIABLES ###
 
 # If !false, Next's bundle(s) will be analyzed and report files generated.
@@ -107,91 +108,3 @@ MAX_MAIL_SUBJECT_LENGTH=75
 # Maximum allowed size of an mail (direct message) body. Should be a string like
 # 1kb, 1mb, 500b.
 MAX_MAIL_BODY_LENGTH_BYTES=512b
-
-### EXTERNAL SCRIPT VARIABLES ###
-# (optional unless using the relevant external script)
-
-# How often this script is going to be invoked. This doesn't determine anything
-# automatically on its own, this is useful to ensure the script works no matter
-# how often you decide to call it.
-BAN_HAMMER_WILL_BE_CALLED_EVERY_SECONDS=60
-
-# The maximum number of requests per BAN_HAMMER_RESOLUTION_WINDOW_SECONDS
-# allowed by a single client.
-BAN_HAMMER_MAX_REQUESTS_PER_WINDOW=10
-
-# How far back into the past this script looks when checking a key or ip against
-# BAN_HAMMER_MAX_REQUESTS_PER_WINDOW.
-BAN_HAMMER_RESOLUTION_WINDOW_SECONDS=1
-
-# The initial amount of time an offender is banned.
-BAN_HAMMER_DEFAULT_BAN_TIME_MINUTES=1
-
-# When an offender is banned twice in the same "period," they're banned for
-# BAN_HAMMER_DEFAULT_BAN_TIME_MINUTES * BAN_HAMMER_RECIDIVISM_PUNISH_MULTIPLIER
-# minutes instead of the default. This is also the length of the "period".
-BAN_HAMMER_RECIDIVISM_PUNISH_MULTIPLIER=2
-
-# The size (in bytes) of the root request-log collection will not be allowed to
-# exceed this amount. Oldest entries are deleted first. Should be a string like
-# 1kb, 1mb, 500b.
-PRUNE_DATA_MAX_LOGS_BYTES=50mb
-
-# The size (in bytes) of the root limited-log collection will not be allowed to
-# exceed this amount. Oldest entries are deleted first. Should be a string like
-# 1kb, 1mb, 500b.
-PRUNE_DATA_MAX_BANNED_BYTES=10mb
-
-# The size (in bytes) of the mail collection will not be allowed to exceed this
-# amount. Oldest entries are deleted first. Should be a string like 1kb, 1mb,
-# 500b.
-PRUNE_DATA_MAX_MAIL_BYTES=10mb
-
-# The size (in bytes) of the questions collection will not be allowed to exceed
-# this amount. Oldest entries are deleted first. Should be a string like 1kb,
-# 1mb, 500b.
-PRUNE_DATA_MAX_QUESTIONS_BYTES=350mb
-
-# The size (in bytes) of the users collection will not be allowed to exceed this
-# amount. Oldest entries are deleted first. Should be a string like 1kb, 1mb,
-# 500b.
-PRUNE_DATA_MAX_USERS_BYTES=10mb
-
-# The StackExchange client key used to ensure the initialize-data external script
-# has a much higher request quota.
-STACKAPPS_AUTH_KEY=
-
-# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
-# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
-#
-# Must be a positive number such that no greater than 30 requests are sent per
-# second or the StackExchange API will rate limit you.
-STACKAPPS_INTERVAL_PERIOD_MS=1000
-
-# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
-# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
-#
-# Must be a positive number such that no greater than 30 requests are sent per
-# second or the StackExchange API will rate limit you.
-STACKAPPS_MAX_REQUESTS_PER_INTERVAL=10
-
-# The number of questions to render from the StackExchange API, which will be
-# one less than the total number of questions inserted into the database.
-STACKAPPS_TOTAL_API_GENERATED_QUESTIONS=100
-
-# The number of answers the "collect all" questions will have.
-STACKAPPS_COLLECTALL_QUESTION_ANSWERS=150
-
-# The number of comments the "collect all" questions will have.
-STACKAPPS_COLLECTALL_QUESTION_COMMENTS=250
-
-# The number of comments the first answer of the "collect all" question will
-# have.
-STACKAPPS_COLLECTALL_FIRST_ANSWER_COMMENTS=150
-
-# The maximum number of items that will be requested from the StackExchange API.
-# Must be a positive number no greater than 100.
-STACKAPPS_MAX_PAGE_SIZE=100
-
-### TOOLS FRONTEND VARIABLES ###
-# (optional unless using tools)
